# autopilot-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  MASTER_PLAN.md  README.md  docker-compose.yml  pyproject.toml  setup.py
.agents_tmp/: PLAN.md
.demo_memory/: index.json
frontend/: demo.html  index.html  styles.css
nanocorp/: README.md  __init__.py  agent_spawner.py  cli.py  free_providers.py  full_system.py  integrations.py  nanocorp.py  nanocorp_free.py  providers.py  requirements.txt  vector_memory.py  webhooks.py
nanocorp/agents/: __init__.py  base.py  ceo.py  ceo_agent.py  manager.py  task_manager.py  worker.py
nanocorp/agents/workers/: __init__.py  content_worker.py  devops_worker.py  document_worker.py  email_worker.py  finance_worker.py  hr_worker.py  legal_worker.py  marketing_worker.py  research_networker_workers.py  sales_worker.py  social_media_worker.py  support_worker.py  webdev_worker.py
nanocorp/ai/: __init__.py
nanocorp/api/: __init__.py  server.py
nanocorp/config/: __init__.py  settings.py
nanocorp/core/: __init__.py  autonomy_engine.py  goals.py  memory.py  ooda.py  parallel_executor.py
nanocorp/examples/: demo.py  demo_v3.py  demo_working.py  super_demo.py
nanocorp/logging/: __init__.py
nanocorp/mcp/: __init__.py  client.py
nanocorp/mcp/servers/: __init__.py
nanocorp/memory/: __init__.py  core.py
nanocorp/persistence/: database.py
nanocorp/sandbox/: __init__.py
nanocorp/scheduler/: __init__.py
nanocorp/skills/: __init__.py
nanocorp/tools/: __init__.py  base.py  code.py  filesystem.py  registry.py  web.py
tests/: __init__.py  conftest.py
tests/unit/: test_agents.py  test_memory.py  test_tools.py
